# grid-coverage

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: main.cpp  penmp
src/model/: block.cpp  block.h  coverage_problem.cpp  coverage_problem.h  grid.cpp  grid.h  point.cpp  point.h
src/solver/data-parallel/: solver.cpp  solver.h
src/solver/distributed/: solver.cpp  solver.h
